$Id: History,v 1.42 2002-05-15 06:51:30 asaim Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

May 15, 2002, M.Asai (intercoms-V04-00-03)
- Limit number of stored command string. (improvements)

May 14, 2002, M.Asai (intercoms-V04-00-02)
- Limit number of stored command string.

May 3, 2002, M.Asai (intercoms-V04-00-01)
- Recover G4UImanager::ApplyCommand(G4String) to accept + operator

Apr 26, 2002, M.Asai (intercoms-V04-00-00)
- Eliminate naive G4String type arguments
 Modified classes :
  G4UIparameter G4UImanager G4UIbatch G4UIaliasList G4UIcmdWithAnInteger
  G4UIcmdWithADoubleAndUnit G4UIcmdWithADouble G4UIcmdWithABool
  G4UIcmdWith3VectorAndUnit G4UIcmdWith3Vector G4UIcommand G4UIcommandTree

Nov 23, 2001, M.Asai (intercoms-V03-02-15)
- Fix a problem with a command which has doubled slash.

Oct 23, 2001, G.Cosmo (intercoms-V03-02-14)
- Restored inclusion of G4Tokenizer.hh for removal of STLinterface module.
  Files: G4UImanager.cc, G4UIcommand.cc and G4UIparameter.cc.

Oct 12, 2001, M.Asai (intercoms-V03-02-13)
- Rename method in G4UIcommandTree to avoid confliction.
- Temporarly replaced inclusion of G4Tokenizer.hh with old RW wrapper. (G.Cosmo)