@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4UIbatch.hh,v 1.5 2002-04-26 22:03:35 asaim Exp $
+// $Id: G4UIbatch.hh,v 1.6 2002-06-07 17:37:44 asaim Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // $id$
@@ -56,7 +56,7 @@ class G4UIbatch : public G4UIsession
       ~G4UIbatch();
 
       G4UIsession * SessionStart();
-      void PauseSessionStart(const char* Prompt);
+      void PauseSessionStart(G4String Prompt);
   
   private:
       G4UImanager * UImanager;
