@@ -1,4 +1,4 @@
-$Id: History,v 1.42 2002-05-15 06:51:30 asaim Exp $
+$Id: History,v 1.43 2002-06-07 17:37:43 asaim Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,8 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+Jun 7, 2002, M.Asai (intercoms-V04-00-04)
+- Fix for a warning message in G4UIbatch.
 
 May 15, 2002, M.Asai (intercoms-V04-00-03)
 - Limit number of stored command string. (improvements)
